--- a/e-commerce/index.html
+++ b/e-commerce/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./src/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="An advanced E-commerce website with seamless cart management and user authentication." />
+    <meta name="keywords" content="E-commerce, Shopping, Online Store, React, Cart Management" />
+    <meta name="author" content="Leela Sanjay Kumar Velivela" />
+
+    <!-- Open Graph (for social media sharing) -->
+    <meta property="og:title" content="E-commerce Website" />
+    <meta property="og:description" content="A feature-rich E-commerce platform built with React." />
+    <meta property="og:image" content="https://yourwebsite.com/icon.png" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="E-commerce Website" />
+    <meta name="twitter:description" content="A feature-rich E-commerce platform built with React." />
+    <meta name="twitter:image" content="https://yourwebsite.com/icon.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
+
+    <link rel="stylesheet" href="./src/index.css">
     <title>E-commerce Website</title>
   </head>
   <body>
-   
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
